# python-copier-template

./: PLAN.md  README.md
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: test.yml  trigger-template-update.yml
template/: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  cliff.toml  justfile  main.py  pyproject.toml
template/.claude/: settings.local.json
